using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimStrings
{
    internal static string IsMoving = "IsMoving";
    internal static string IsRunning = "IsRunning";
    internal static string IsGrounded = "IsGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string JumpTrigger = "Jump";
    internal static string IsOnCeiling = "IsOnCeiling";
    internal static string IsOnWall = "IsOnWall";
    internal static string RollTrigger = "Roll";
    internal static string IsCrouching = "IsCrouching";
    internal static string IsAttacking = "IsAttacking";
    internal static string IsAltAttacking = "IsAltAttacking";
    internal static string canMove = "canMove";
    internal static string hasTarget = "HasTarget";
    internal static string isAlive = "IsAlive";
    internal static string HitTrigger = "Hit";

    internal static string lockVelocity = "LockVelocity";
    internal static string EnterPortal = "EnterPortal";
    internal static string ExitPortal = "ExitPortal";
}